--- a/app/workvisualizer/package.json
+++ b/app/workvisualizer/package.json
@@ -17,6 +17,7 @@
     "d3": "^7.9.0",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18"
   },
