--- a/app/workvisualizer/package.json
+++ b/app/workvisualizer/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
     "d3": "^7.9.0",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
