--- a/app/workvisualizer/package.json
+++ b/app/workvisualizer/package.json
@@ -21,7 +21,7 @@
     "d3": "^7.9.0",
     "framer-motion": "^11.1.7",
     "lucide-react": "^0.379.0",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
