--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ data
 misc/plots
 misc/hierarchies
 app/workvisualizer/api/files/*
-!app/workvisualizer/tests/data
+app/workvisualizer/tests/data/*
+!app/workvisualizer/tests/data/cali
